kubernetes/immich/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: immich
  namespace: immich
  labels:
    app.kubernetes.io/instance: immich
  annotations:
    externaldns.k8s.io: pihole
    route.openshift.io/termination: edge
spec:
  ingressClassName: openshift-default
  rules:
    - host: photos.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: immich-server
                port:
                  name: http
  tls:
    - hosts:
        - photos.arthurvardevanyan.com
      secretName: immich-cert
